Use cases documentation